some ui changes

--- a/online/index.html
+++ b/online/index.html
@@ -10,18 +10,18 @@
   <link rel="stylesheet" href="/assests/css/index.css">
   <style type="text/css">
   .pimg2{
-    background-image:url('/assests/images/image2.jpg');
+    background-image:url('https://www.boxpark.co.uk/assets/Uploads/_resampled/FillWyIxOTIwIiwiMTA4MCJd/Bao-Bao-Holder3.jpg');
     min-height:400px;
   }
 
   .pimg3{
-    background-image:url('/assests/images/image3.jpg');
+    background-image:url('https://static.independent.co.uk/s3fs-public/thumbnails/image/2017/10/29/09/istock-475895644.jpg');
     min-height:400px;
 
   }
 
   .pimg4 {
-  	background-image:url('/assests/images/image2.jpg');
+  	background-image:url('https://media.timeout.com/images/103585547/image.jpg');
   	min-height:100vh;
   }
 
@@ -43,8 +43,8 @@
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search">
-        <a href="/login" class="btn btn-primary" >LOGIN</a></button>
+
+        <a href="/login" class="btn btn-primary" >Grab a bite!!</a></button>
       </form>
     </div>
   </nav>
@@ -110,7 +110,7 @@
   </div>
 
   <section class="section section-light">
-    
+
     <div class="row mt-2 ">
       <div class="col-md-4 image-1 ">
 
@@ -144,13 +144,13 @@
   <div class="pimg2">
     <div class="ptext">
       <span class="border trans">
-        some  Text
+        Share a great experience
       </span>
     </div>
   </div>
 
   <section class="section section-dark">
-    <h2>Section Three</h2>
+
 
     <!--best selling product  line with heading -->
     <div style="width: 100%; height: 20px; border-bottom: 2px solid red; text-align: center" class="mb-4">
@@ -199,13 +199,13 @@
   <div class="pimg3">
     <div class="ptext">
       <span class="border trans">
-        some  Text
+        Eat! Meet! And Greet!
       </span>
     </div>
   </div>
 
   <section class="section section-dark">
-    <h2>Section Three</h2>
+
     <!--featured product  line with heading -->
     <div style="width: 100%; height: 20px; border-bottom: 2px solid red; text-align: center" class="mb-4">
     <span style="font-size: 30px; background-color: #F3F5F6; border: 2px solid red; padding: 0 10px; border-radius: 25px;">
@@ -267,9 +267,9 @@
                     <div class="col-md-2 mx-auto">
                         <h5 class="text-uppercase mb-4 mt-3">Quick links</h5>
                         <ul class="list-unstyled">
-                            <li><a href="#!">Cafe menu</a></li>
+                            <li><a href="/items">Cafe menu</a></li>
                             <li><a href="mailto:thakursachin467@gmail.com">Contact Us</a></li>
-                            <li><a href="/assests/complain/complain.html">Complain</a></li>
+                            <li><a href="/complain">Complain</a></li>
                         </ul>
                     </div>
 
@@ -279,10 +279,10 @@
                     <div class="col-md-2">
                         <h5 class="text-uppercase mb-4 mt-3 font-weight-bold">Our menu</h5>
                         <ul class="list-unstyled">
-                            <li><a href="#!">What's new</a></li>
-                            <li><a href="#!">Food</a></li>
-                            <li><a href="#!">Beverages</a></li>
-                            <li><a href="#!">Combos</a></li>
+                            <li><a href="/items">What's new</a></li>
+                            <li><a href="/items">Food</a></li>
+                            <li><a href="/items">Beverages</a></li>
+                            <li><a href="/items">Combos</a></li>
                         </ul>
                     </div>
 
@@ -300,7 +300,7 @@
                     <li class="list-inline-item">
                         <h5 class="mb-1">Register for free</h5>
                     </li>
-                    <li class="list-inline-item"><a href="login.html" class="btn btn-danger btn-rounded">Sign up!</a></li>
+                    <li class="list-inline-item"><a href="/login" class="btn btn-danger btn-rounded">Sign up!</a></li>
                 </ul>
             </div>
 
